changement du mode de gestion des métadonnées des documents du corpus (affichage dans le détail des contextes) ajout bouton fermer tous les onglets fermables correction bug tri sur la prononciation correction bug tri des mots après recherche divers ajustements cosmétiques

--- a/web/src/main/webapp/css/corpus.css
+++ b/web/src/main/webapp/css/corpus.css
@@ -35,6 +35,19 @@ body {
    text-align: center; 
  } 
 
+/* 
+   Pour aérer bouton toolbar (padding à 0px au lieu de 2px)
+*/
+.z-toolbarbutton-cnt {
+	padding: 0px;
+	position: relative;
+	zoom: 1;
+	font-family: arial,sans-serif;
+	font-size: 11px;
+	font-weight: normal;
+}
+
+
  .category-center .z-auxheader-cnt { 
    text-align: center; 
  }
