--- a/web/src/main/webapp/index.zul
+++ b/web/src/main/webapp/index.zul
@@ -18,7 +18,7 @@
 	]]></script>
 
 	
-<window id="webCorpusWindow" border="none" width="100%" height="100%">
+<window id="webCorpusWindow" border="none" width="100%" height="100%" apply="com.servicelibre.zk.controller.IndexCtrl">
 
 	<include id="entete" src="/entete.zul"/>
 	
@@ -27,6 +27,11 @@
 			<tab id="listeTab" label="Listes" />
 			<tab id="contexteTab" label="Contextes" />
 		</tabs>
+		
+		<toolbar>
+	        <toolbarbutton id="boutonFermerTousLesOnglets" image="/images/fermerOnglet.png"/>
+    	</toolbar>
+		
 		
 		<tabpanels id="corpusTabpanels" width="100%" height="100%">
 		
