- modification bouton effacer tout (recherche, filtre, etc.) - renommer colonnes RO => OR, Prononciations => Phonétique, Catégorie => Classe de mot - tooltiptext sur bouton fermer tout, colonne phonétique, etc. - correction bug mot doublons si plusieurs prononciations (ajout DISTINCT dans criteria JPA) - onglet info contexte: renommer « métadonnées du document source » en « information sur la source du contexte » - onglet info contexte: suppression des libellés des colonnes (métadonnée et valeur) - cooccurrent: toujours rechercher uniquement voisinnage de 3 - cooccurrent: ne pas afficher les mots de freq 0

--- a/web/src/main/webapp/contextes.zul
+++ b/web/src/main/webapp/contextes.zul
@@ -36,7 +36,7 @@
 				
 			<button id="boutonRecherche" label="Recherche"/>
 			
-			<button  id="effacerRecherche" image="/images/effacer-16x16.png"
+			<button  id="effacerRecherche" image="/images/effacer-2-16x16.png"
                     width="32px" orient="horizontal" tooltiptext="réinitialiser la recherche"/>  
 			
 		</hbox>
@@ -57,7 +57,7 @@
 				<div align="center" style="margin-top:10px;">
 					 <button  id="boutonAjoutFiltre" image="/images/flècheBleueBas-16x16.png"
                     hoverImage="/images/flècheVerteBas-16x16.png" width="70px" orient="horizontal" dir="reverse" tooltiptext="ajouter le filtre et la valeur sélectionnés aux filtres actifs"/>
-					 <button  id="boutonEffacerFiltre" image="/images/effacer-16x16.png"
+					 <button  id="boutonEffacerFiltre" image="/images/effacer-2-16x16.png"
                     width="32px" orient="horizontal" tooltiptext="supprimer tous les filtres actifs"/>                    
 				</div>
 				
