--- a/web/src/main/webapp/infoContexte.zul
+++ b/web/src/main/webapp/infoContexte.zul
@@ -24,12 +24,9 @@
 </div>
 
 <div align="center" style="margin:15px;">
-	<label sclass="titre4" value="Métadonnées du document source" />
+	<label sclass="titre4" value="Information sur la source du contexte" />
 	<grid width="50%" style="margin:15px;">
-		<columns>
-			<column hflex="1" label="Métadonnée"/>
-			<column hflex="4" label="Valeur"/>
-		</columns>
+		<columns/>
 		<rows>
 		<zk forEach="${arg.métadonnées}">
 			<row>
