--- a/web/src/main/webapp/listes.zul
+++ b/web/src/main/webapp/listes.zul
@@ -31,11 +31,11 @@
 				<textbox id="cherche" focus="true"></textbox>
 				
 				<button id="boutonRecherche" label="Recherche"/>
-				<button  id="effacerRecherche" image="/images/effacer-16x16.png"
+				<button  id="effacerRecherche" image="/images/effacer-2-16x16.png"
                     width="32px" orient="horizontal" tooltiptext="réinitialiser la recherche"/>  
 			</hbox>
 			
-			<!-- L'alphabet phonétiqe est inséré ici dynamiquement -->
+			<!-- L'alphabet phonétique est inséré ici dynamiquement -->
 			<div id="api" align="center" visible="false" style="margin-top:7px; margin-bottom:7px;"/>
 			<div id="caractèresSpéciaux" align="center" visible="false" style="margin-top:7px; margin-bottom:7px;"/>
 			
@@ -53,7 +53,7 @@
 <!-- 					<button id="boutonAjoutFiltre" label="ajouter" disabled="false" image=""/> -->
 					 <button  id="boutonAjoutFiltre" image="/images/flècheBleueBas-16x16.png"
                     hoverImage="/images/flècheVerteBas-16x16.png" width="70px" orient="horizontal" dir="reverse" tooltiptext="ajouter le filtre et la valeur sélectionnés aux filtres actifs"/>
-					 <button  id="boutonEffacerFiltre" image="/images/effacer-16x16.png"
+					 <button  id="boutonEffacerFiltre" image="/images/effacer-2-16x16.png"
                     width="32px" orient="horizontal" tooltiptext="supprimer tous les filtres actifs"/>                    
 				</div>
 				
@@ -73,7 +73,7 @@
 			
 				<label id="infoRésultats"  value=""  style="font-style:italic;text-align:center;"/>
 				  <menupopup id="editPopup">       
-               		<menuitem id="menuitemPrononciation" autocheck="true" label="afficher la colonne « Prononciations »"  onClick="colonnePrononciation.setVisible(!colonnePrononciation.isVisible())" checked="false"/>
+               		<menuitem id="menuitemPrononciation" autocheck="true" label="afficher la colonne « Phonétique »"  onClick="colonnePrononciation.setVisible(!colonnePrononciation.isVisible())" checked="false"/>
     			</menupopup>
 				<grid id="motsGrid" mold="paging" pageSize="20"
 					height="550px" width="700px"
@@ -81,9 +81,9 @@
 							
 					<columns sizable="true" menupopup="editPopup">
 						<column width="130px" id="mot" label="Mot" sortDirection="ascending" sort="auto"/>
-						<column width="100px" id="colonnePrononciation" label="Prononciations"  sort="auto(prononciationsString,lemme)" visible="false" /> 
-						<column width="40px" label="RO"  sort="auto(ro,lemme)"/> 
-						<column width="80px" label="Catégorie"  sort="auto(catgram,genre,lemme)"/> 
+						<column width="100px" id="colonnePrononciation" label="Phonétique"  sort="auto(prononciationsString,lemme)" tooltiptext="transcription phonétique"  visible="false" /> 
+						<column width="40px" label="OR"  sort="auto(ro,lemme)" tooltiptext="orthographe rectifiée"/> 
+						<column width="100px" label="Classe de mot"  sort="auto(catgram,genre,lemme)"/> 
 						<column width="50px" label="Genre" sort="auto(genre, lemme)"/>
 						<column width="60px" label="Nombre"  sort="auto(nombre, lemme)"/>
 						<column width="70px" label="Précision" sort="auto(catgramPrésicion, lemme)"/>
