refactoring de la gestion des métadonnées du document (filtre + affichage dans info contexte)

--- a/web/src/main/webapp/infoContexte.zul
+++ b/web/src/main/webapp/infoContexte.zul
@@ -30,7 +30,7 @@
 		<rows>
 		<zk forEach="${arg.métadonnées}">
 			<row>
-				<label value="${each.name}">
+				<label value="${each.nom}">
 				</label><label value="${each.simpleString}"></label>
 			</row>
 		</zk>
