--- a/web/src/main/webapp/infoContexte.zul
+++ b/web/src/main/webapp/infoContexte.zul
@@ -4,38 +4,52 @@
 	<label sclass="titre3" value="Contexte d'utilisation du mot «&#xA0;${arg.mot}&#xA0;»" />
 </div>
 
-<div align="center" style="margin:15px;">
-	<label sclass="titre4" value="Phrase complète" />
+<div align="center" style="margin:10px;">
+<borderlayout width="640px" height="600px">
+	<north  border="none">
 		<div align="center" style="margin:15px;">
-			<label value="${arg.phrase_g}"/>
-			<label value="${arg.phrase_m}" sclass="terme"/>
-			<label value="${arg.phrase_d}"/>
+			<label sclass="titre4" value="Phrase complète" />
+			<div align="center" style="margin:15px;">
+				<label value="${arg.phrase_g}"/>
+				<label value="${arg.phrase_m}" sclass="terme"/>
+				<label value="${arg.phrase_d}"/>
+			</div>	
+			<label sclass="titre4" value="Voisinage" />	
+		</div>
+	</north>
+	<center autoscroll="true" border="none">
+		<div align="center" style="margin:15px;" height="200px">
+				<div align="left" style="margin:15px;"  >
+				
+					<label value="${arg.voisinage_g}" multiline="true"/>
+					<label value="${arg.voisinage_m}" sclass="terme" multiline="true"/>
+					<label value="${arg.voisinage_d}" multiline="true"/>
+				</div>	
+		</div>
+	</center>
+	<south flex="true"  border="none">
+		<div align="center" style="margin:15px;">
+			<label sclass="titre4" value="Information sur la source du contexte" />
+			<grid width="50%" style="margin:15px;">
+				<columns/>
+				<rows>
+				<zk forEach="${arg.métadonnées}">
+					<row>
+						<label value="${each.nom}">
+						</label><label value="${each.simpleString}"></label>
+					</row>
+				</zk>
+				</rows>
+			</grid>
 		</div>	
-	
+	</south>
+	<west  border="none"/>
+	<east  border="none"/>
+</borderlayout>
 </div>
 
-<div align="center" style="margin:15px;">
-	<label sclass="titre4" value="Voisinage" />
-		<div align="left" style="margin:15px;">
-			<label value="${arg.voisinage_g}"/>
-			<label value="${arg.voisinage_m}" sclass="terme"/>
-			<label value="${arg.voisinage_d}"/>
-		</div>	
-</div>
 
-<div align="center" style="margin:15px;">
-	<label sclass="titre4" value="Information sur la source du contexte" />
-	<grid width="50%" style="margin:15px;">
-		<columns/>
-		<rows>
-		<zk forEach="${arg.métadonnées}">
-			<row>
-				<label value="${each.nom}">
-				</label><label value="${each.simpleString}"></label>
-			</row>
-		</zk>
-		</rows>
-	</grid>
-</div>
+
+
 
 </zk>
