--- a/web/src/main/webapp/infoContexte.zul
+++ b/web/src/main/webapp/infoContexte.zul
@@ -30,7 +30,7 @@
 	<south flex="true"  border="none">
 		<div align="center" style="margin:15px;">
 			<label sclass="titre4" value="Information sur la source du contexte" />
-			<grid width="50%" style="margin:15px;">
+			<grid width="80%">
 				<columns/>
 				<rows>
 				<zk forEach="${arg.métadonnées}">
