--- a/web/src/main/webapp/contextes.zul
+++ b/web/src/main/webapp/contextes.zul
@@ -52,7 +52,7 @@
 			<groupbox width="286px">
 				<caption>Filtre</caption>
 				<listbox id="nomFiltre"  style="width:140px" mold="select"/>
-				<listbox id="valeurFiltre" style="width:140px" mold="select"/>
+				<listbox id="valeurFiltre" style="width:140px" mold="select" multiple="true" rows="2"/>
 				
 				<div align="center" style="margin-top:10px;">
 					 <button  id="boutonAjoutFiltre" image="/images/flècheBleueBas-16x16.png"
