--- a/web/src/main/webapp/contextes.zul
+++ b/web/src/main/webapp/contextes.zul
@@ -48,30 +48,55 @@
 	
 		<hbox width="100%" height="100%" style="margin-top:20px;">
 		
-		<!-- FIXME utiliser include  -->
-			<groupbox width="286px">
-				<caption>Filtre</caption>
-				<listbox id="nomFiltre"  style="width:140px" mold="select"/>
-				<listbox id="valeurFiltre" style="width:140px" mold="select" multiple="true" rows="2"/>
-				
-				<div align="center" style="margin-top:10px;">
-					 <button  id="boutonAjoutFiltre" image="/images/flècheBleueBas-16x16.png"
-                    hoverImage="/images/flècheVerteBas-16x16.png" width="70px" orient="horizontal" dir="reverse" tooltiptext="ajouter le filtre et la valeur sélectionnés aux filtres actifs"/>
-					 <button  id="boutonEffacerFiltre" image="/images/effacer-2-16x16.png"
-                    width="32px" orient="horizontal" tooltiptext="supprimer tous les filtres actifs"/>                    
-				</div>
-				
-				<grid id="gridFiltreActif" fixedLayout="true"
-					 style="margin-top:10px;" emptyMessage="Aucun filtre actif.">
-					<auxhead sclass="category-center">
-						<auxheader label="Filtres actifs" colspan="2"
-							rowspan="1" />
-					</auxhead>
-					<columns/>
-					<rows/>
-				</grid>
+			<!-- FIXME utiliser include  -->
+		<vbox>
+			<groupbox width="286px" height="340px">
+					<caption>Filtre</caption>
+					<hbox >
+						<listbox id="nomFiltre"  style="width:140px;" mold="select"/>
+			
+						<bandbox width="135px" readonly="true" buttonVisible="true" autodrop="true">
+							<bandpopup height="205px" width="205px">
+								<vbox height="205px" style="margin:0px;" >
+<!-- 								
+	mold paging + pageSize sinon bug avec mold select => 20 premiers listitem OK, les suivants = blancs...
+	Documenter et envoyer à ZK 
+	Pas possible de reproduire dans sandbox avec création statique de listitem.  
+	Essayer d'isoler cas avec ajout des listitems via Java
 
-			</groupbox>
+-->
+										<listbox width="200px" checkmark="true" id="valeurFiltre" multiple="true" mold="paging" pageSize="999">
+											<listhead><listheader>Tout sélectionner</listheader></listhead>
+										</listbox>
+								</vbox>
+							</bandpopup>
+						</bandbox>
+					</hbox>
+					
+					<div align="center" style="margin-top:10px;">
+	<!-- 					<button id="boutonAjoutFiltre" label="ajouter" disabled="false" image=""/> -->
+						 <button  id="boutonAjoutFiltre" image="/images/flècheBleueBas-16x16.png"
+	                    hoverImage="/images/flècheVerteBas-16x16.png" width="70px" orient="horizontal" dir="reverse" tooltiptext="ajouter le filtre et la valeur sélectionnés aux filtres actifs"/>
+						 <button  id="boutonEffacerFiltre" image="/images/effacer-2-16x16.png"
+	                    width="32px" orient="horizontal" tooltiptext="supprimer tous les filtres actifs"/>                    
+					</div>
+					
+					<grid id="gridFiltreActif" fixedLayout="true"
+						 style="margin-top:10px;" emptyMessage="Aucun filtre actif." height="255px">
+						<auxhead sclass="category-center">
+							<auxheader label="Filtres actifs" colspan="2"
+								rowspan="1" />
+						</auxhead>
+						<columns/>
+						<rows/>
+					</grid>
+	
+				</groupbox>
+				
+				<groupbox  width="286px" height="204px">
+					<caption>Historique des recherches</caption>
+				</groupbox>
+			</vbox>
 			
 			<vbox  height="645px" width="700px">
 					<div>
