génération d'exportation XLS (première version - à nettoyer)

--- a/web/src/main/webapp/css/corpus.css
+++ b/web/src/main/webapp/css/corpus.css
@@ -92,9 +92,13 @@ body {
  }
  
  .mot {
- 	cursor:hand;
+ 	/*cursor:hand;*/
  	cursor:pointer;
  	font-weight: bold;
+ }
+ 
+ .clicable {
+ 	cursor:pointer;
  }
  
  .groupe {
