--- a/web/src/main/webapp/contextes.zul
+++ b/web/src/main/webapp/contextes.zul
@@ -109,7 +109,8 @@
 								<a id="cooccurrentLien" visible="false">cooccurrents</a>
 						</div>
 						<div align="right">
-							<image id="exportationCsv"	src="/images/csv.png" class="clicable"/>
+<!-- 							<image id="exportationCsv"	src="/images/csv.png" class="clicable"/> -->
+							<image id="exportationXls"	src="/images/xls.png" class="clicable"/>
 						</div>
 					</hbox>
 							
