--- a/web/src/main/webapp/listes.zul
+++ b/web/src/main/webapp/listes.zul
@@ -96,6 +96,8 @@
 			
 			<menupopup id="editPopup">       
                		<menuitem id="menuitemPrononciation" autocheck="true" label="afficher la colonne « Phonétique »"  onClick="colonnePrononciation.setVisible(!colonnePrononciation.isVisible())" checked="false"/>
+               		<menuitem id="menuitemNombre" autocheck="true" label="afficher la colonne « Nombre »"  onClick="colonneNombre.setVisible(!colonneNombre.isVisible())" checked="false"/>
+               		<menuitem id="menuitemPrécision" autocheck="true" label="afficher la colonne « Précision »"  onClick="colonnePrécision.setVisible(!colonnePrécision.isVisible())" checked="false"/>
     		</menupopup>
 			
 			<!-- ******************** -->
@@ -121,12 +123,12 @@
 					<columns sizable="true" menupopup="editPopup">
 						<column width="290px" id="mot" label="Mot" sortDirection="ascending" sort="auto"/>
 						<column width="100px" id="colonnePrononciation" label="Phonétique"  sort="auto(prononciationsString,lemme)" tooltiptext="transcription phonétique"  visible="false" /> 
-						<column width="40px" label="OR"  sort="auto(ro,lemme)" tooltiptext="orthographe rectifiée" visible="false"/> 
-						<column width="100px" label="Classe de mot"  sort="auto(catgram,genre,lemme)"/> 
-						<column width="50px" label="Genre" sort="auto(genre, lemme)"/>
-						<column width="60px" label="Nombre"  sort="auto(nombre, lemme)" visible="false"/>
-						<column width="70px" label="Précision" sort="auto(catgramPrésicion, lemme)" visible="false"/>
-						<column  label="Liste" sort="auto(liste, lemme)"/>
+						<column width="40px" id="colonneRO" label="OR"  sort="auto(ro,lemme)" tooltiptext="orthographe rectifiée" visible="false"/> 
+						<column width="100px" id="colonneClasse" label="Classe de mot"  sort="auto(catgram,genre,lemme)"/> 
+						<column width="50px" id="colonneGenre" label="Genre" sort="auto(genre, lemme)"/>
+						<column width="60px" id="colonneNombre" label="Nombre"  sort="auto(nombre, lemme)" visible="false"/>
+						<column width="70px" id="colonnePrécision" label="Précision" sort="auto(catgramPrésicion, lemme)" visible="false"/>
+						<column  id="colonneListe" label="Liste" sort="auto(liste, lemme)"/>
 					</columns>
 					<rows />
 				</grid>
