- ajustement de la taille de la liste des valeurs des filtres - optimisation de la génération des requêtes SQL pour filtres sur les listes - suppression de l'indicateur de l'orthographe traditionnelle (OT) - ajout « hover soulignement » pour liens cliquables - petits refactoring de noms divers + javadoc + typos

--- a/web/src/main/webapp/css/corpus.css
+++ b/web/src/main/webapp/css/corpus.css
@@ -92,12 +92,18 @@ body {
  }
  
  .mot {
- 	/*cursor:hand;*/
  	cursor:pointer;
  	font-weight: bold;
+ 	text-decoration: none; 
  }
  
- .clicable {
+  .mot:hover {
+ 	cursor:pointer;
+ 	font-weight: bold;
+ 	text-decoration: underline; 
+ }
+ 
+ .cliquable {
  	cursor:pointer;
  }
  
