--- a/web/src/main/webapp/listes.zul
+++ b/web/src/main/webapp/listes.zul
@@ -4,6 +4,7 @@
 
 <zk>
 
+<!-- http://books.zkoss.org/wiki/ZK_Developer's_Reference/Performance_Tips/Listbox,_Grid_and_Tree_for_Huge_Data/Turn_on_Render_on_Demand -->
 <custom-attributes org.zkoss.zul.grid.rod="true" scope="page"/>
 
 <window id="listeWindow" border="none" apply="com.servicelibre.zk.controller.ListeCtrl">
@@ -13,8 +14,8 @@
 			<hbox style="margin-top:10px;">
 
 				<combobox id="gp" readonly="true" width="120px">
-						<comboitem label="mots" value="g" />
-						<comboitem label="prononciations" value="p" />
+						<comboitem label="mots" value="GRAPHIE" />
+						<comboitem label="prononciations" value="PRONONCIATION" />
 				</combobox>
 	
 				<combobox id="condition" readonly="true"
@@ -43,8 +44,13 @@
 
 		<hbox width="100%" style="margin-top:20px;">
 		
-		<!-- FIXME utiliser include  -->
 		<vbox>
+			
+			<!-- **************** -->
+			<!-- Zone des filtre  -->
+			<!-- **************** -->
+		
+			<!-- FIXME utiliser include  -->
 			<groupbox width="286px" height="340px">
 					<caption>Filtre</caption>
 					<hbox >
@@ -95,22 +101,25 @@
 	
 				</groupbox>
 				
-				<groupbox  width="286px" height="204px">
-					<caption>Historique des recherches</caption>
-				</groupbox>
-			</vbox>
+			<!-- ************************* -->
+			<!-- Historique des recherches -->
+			<!-- ************************* -->
+
+			<include id="historiqueRechercheInclude" src="/historiqueRecherches.zul"/>
+				
+		</vbox>
 			
-			<menupopup id="editPopup">       
-               		<menuitem id="menuitemPrononciation" autocheck="true" label="afficher la colonne « Phonétique »"  onClick="colonnePrononciation.setVisible(!colonnePrononciation.isVisible())" checked="false"/>
-               		<menuitem id="menuitemNombre" autocheck="true" label="afficher la colonne « Nombre »"  onClick="colonneNombre.setVisible(!colonneNombre.isVisible())" checked="false"/>
-               		<menuitem id="menuitemPrécision" autocheck="true" label="afficher la colonne « Précision »"  onClick="colonnePrécision.setVisible(!colonnePrécision.isVisible())" checked="false"/>
-    		</menupopup>
-			
-			<!-- ******************** -->
-			<!--   Colonne résultats  -->
-			<!-- ******************** -->
-			
-			<vbox  height="645px" width="700px">
+		<menupopup id="editPopup">       
+              		<menuitem id="menuitemPrononciation" autocheck="true" label="afficher la colonne « Phonétique »"  onClick="colonnePrononciation.setVisible(!colonnePrononciation.isVisible())" checked="false"/>
+              		<menuitem id="menuitemNombre" autocheck="true" label="afficher la colonne « Nombre »"  onClick="colonneNombre.setVisible(!colonneNombre.isVisible())" checked="false"/>
+              		<menuitem id="menuitemPrécision" autocheck="true" label="afficher la colonne « Précision »"  onClick="colonnePrécision.setVisible(!colonnePrécision.isVisible())" checked="false"/>
+   		</menupopup>
+		
+		<!-- ******************** -->
+		<!--   Colonne résultats  -->
+		<!-- ******************** -->
+		
+		<vbox  height="645px" width="700px">
 
 				<hbox>
 					<div align="left" width="680px">
