--- a/web/src/main/webapp/contextes.zul
+++ b/web/src/main/webapp/contextes.zul
@@ -104,6 +104,16 @@
 					</grid>
 	
 				</groupbox>
+				
+				<popup id="popupHistorique" style="padding:0px; margin:0px;">
+					<vlayout style="overflow:auto;padding:0px;margin:0px;" width="200px" height="200px">
+						<label id="descriptionRechercheHistorique"/>
+						<grid id="gridFiltreHistorique" fixedLayout="true" style="border:0px;padding:0px; margin:0px;">
+							<columns/>
+							<rows/>
+						</grid>
+					</vlayout>
+				</popup>
 			
 			<!-- ************************* -->
 			<!-- Historique des recherches -->
