- adaptations diverses Lucene 3.3.0 - hack rapides mots composés avec tiret (en attendant refactoring complet de la couche Lucene) - gestion mots ligaturés

--- a/web/src/main/webapp/infoContexte.zul
+++ b/web/src/main/webapp/infoContexte.zul
@@ -18,7 +18,7 @@
 		</div>
 	</north>
 	<center autoscroll="true" border="none">
-		<div align="center" style="margin:15px;" height="200px">
+		<div align="center" style="margin:15px;" vflex="min">
 				<div align="left" style="margin:15px;"  >
 				
 					<label value="${arg.voisinage_g}" multiline="true"/>
