--- a/web/src/main/webapp/listes.zul
+++ b/web/src/main/webapp/listes.zul
@@ -138,8 +138,8 @@
 						<label id="infoRésultats" value="Tous les mots"  style="font-style:italic;"/>
 					</div>
 					<div align="right">
-<!-- 						<image id="exportationCsv"	src="/images/csv.png" class="clicable"/> -->
-						<image id="exportationXls"	src="/images/xls.png" class="clicable"/>
+<!-- 						<image id="exportationCsv"	src="/images/csv.png" class="cliquable"/> -->
+						<image id="exportationXls"	src="/images/xls.png" class="cliquable" tooltiptext="exporter les résultats"/>
 					</div>
 				</hbox>			
 				 
