--- a/web/src/main/webapp/infoContexte.zul
+++ b/web/src/main/webapp/infoContexte.zul
@@ -1,55 +1,44 @@
-
 <zk>
-<div align="center" style="margin:10px;">
-	<label sclass="titre3" value="Contexte d'utilisation du mot «&#xA0;${arg.mot}&#xA0;»" />
-</div>
 
-<div align="center" style="margin:10px;">
-<borderlayout width="640px" height="600px">
-	<north  border="none">
+	<div align="center" style="margin:10px;">
+		<label sclass="titre3"
+			value="Contexte d'utilisation du mot «&#xA0;${arg.mot}&#xA0;»" />
+	</div>
+
+	<div align="center" style="margin:10px;">
 		<div align="center" style="margin:15px;">
 			<label sclass="titre4" value="Phrase complète" />
 			<div align="center" style="margin:15px;">
-				<label value="${arg.phrase_g}"/>
-				<label value="${arg.phrase_m}" sclass="terme"/>
-				<label value="${arg.phrase_d}"/>
-			</div>	
-			<label sclass="titre4" value="Voisinage" />	
+				<label value="${arg.phrase_g}" />
+				<label value="${arg.phrase_m}" sclass="terme" />
+				<label value="${arg.phrase_d}" />
+			</div>
+			<label sclass="titre4" value="Voisinage" />
 		</div>
-	</north>
-	<center autoscroll="true" border="none">
-		<div align="center" style="margin:15px;" vflex="min">
-				<div align="left" style="margin:15px;"  >
-				
-					<label value="${arg.voisinage_g}" multiline="true"/>
-					<label value="${arg.voisinage_m}" sclass="terme" multiline="true"/>
-					<label value="${arg.voisinage_d}" multiline="true"/>
-				</div>	
+		<div align="center" style="margin:15px;overflow:auto"
+			height="200px">
+			<div align="left" style="margin:15px;">
+
+				<label value="${arg.voisinage_g}" multiline="true" />
+				<label value="${arg.voisinage_m}" sclass="terme"
+					multiline="true" />
+				<label value="${arg.voisinage_d}" multiline="true" />
+			</div>
 		</div>
-	</center>
-	<south flex="true"  border="none">
 		<div align="center" style="margin:15px;">
-			<label sclass="titre4" value="Information sur la source du contexte" />
+			<label sclass="titre4"
+				value="Information sur la source du contexte" />
 			<grid width="80%">
-				<columns/>
+				<columns />
 				<rows>
-				<zk forEach="${arg.métadonnées}">
-					<row>
-						<label value="${each.nom}">
-						</label><label value="${each.simpleString}"></label>
-					</row>
-				</zk>
+					<zk forEach="${arg.métadonnées}">
+						<row>
+							<label value="${each.nom}"></label>
+							<label value="${each.simpleString}"></label>
+						</row>
+					</zk>
 				</rows>
 			</grid>
-		</div>	
-	</south>
-	<west  border="none"/>
-	<east  border="none"/>
-</borderlayout>
-</div>
-
-
-
-
-
+		</div>
+	</div>
 </zk>
